[tool.poetry]
name = "graphgeneration"
version = "0.1.0"
description = ""
authors = ["karen schutte"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
igraph = "^0.11.4"
numpy = "^1.26.4"
networkx = "^3.3"
statistics = "^1.0.3.5"
matplotlib = "^3.8.4"
powerlaw = "^1.5"
scipy = "^1.13.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
